# clippy-insights

./: Cargo.toml  LICENSE
src/: main.rs
