[package]
authors = [ "Fredrik Larsson <nossralf@gmail.com>" ]
edition = "2018"
name    = "clippy-insights"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow        = "1.0"
code_insights = { git = "https://github.com/nossralf/code-insights-rs/" }
git2          = "0.13"
reqwest       = { version = "0.10", features = [ "blocking", "json" ] }
serde_json    = "1.0"
structopt     = "0.3"
