[package]
authors = [ "Fredrik Larsson <nossralf@gmail.com>" ]
edition = "2018"
name    = "clippy-insights"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow        = "1.0"
clap = { version = "4.0", features = ["derive"] }
code_insights = { git = "https://github.com/nossralf/code-insights-rs/" }
git2          = "0.15"
reqwest       = { version = "0.11", features = [ "blocking", "json" ] }
serde_json    = "1.0"
